tests/neg-custom-args/captures/reference-cc.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reference-cc.scala:44:29 ---------------------------------
44 |  val later = usingLogFile { file => () => file.write(0) } // error
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |Found:    (file: java.io.FileOutputStream^'s1) ->'s2 () ->{file} Unit
   |Required: java.io.FileOutputStream^ => () ->'s3 Unit
   |
   |Note that capability file cannot be included in outer capture set 's3.
   |
   |where:    => refers to a fresh root capability created in value later when checking argument to parameter op of method usingLogFile
   |          ^  refers to the universal root capability
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reference-cc.scala:47:25 ---------------------------------
47 |  val xs = usingLogFile: f => // error
   |                         ^
   |Found:    (f: java.io.FileOutputStream^'s4) ->'s5 LzyList[Int]^{f}
   |Required: java.io.FileOutputStream^ => LzyList[Int]^'s6
   |
   |Note that capability f cannot be included in outer capture set 's6.
   |
   |where:    => refers to a fresh root capability created in value xs when checking argument to parameter op of method usingLogFile
   |          ^  refers to the universal root capability
48 |    LzyList(1, 2, 3).map { x => f.write(x); x * x }
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reference-cc.scala:58:8 ----------------------------------
58 |    try () => xs.map(f).sum  // error TODO improve error message
   |        ^^^^^^^^^^^^^^^^^^^
   |Found:    () ->{canThrow$1} Double
   |Required: () => Double
   |
   |Note that capability canThrow$1 is not included in capture set {cap}
   |because (canThrow$1 : CanThrow[LimitExceeded]) in method try$1 is not visible from cap in enclosing function.
   |
   |where:    =>  refers to a fresh root capability created in anonymous function of type (using erased x$1: CanThrow[LimitExceeded]): () => Double when instantiating expected result type () ->{cap²} Double of function literal
   |          cap is a fresh root capability created in anonymous function of type (using erased x$1: CanThrow[LimitExceeded]): () => Double when instantiating expected result type () ->{cap²} Double of function literal
   |
   | longer explanation available when compiling with `-explain`
